--- a/index.css
+++ b/index.css
@@ -29,6 +29,21 @@ body {
   background-size: 400% 400%;
 }
 
+/* Fix for browser autofill styles on dark backgrounds */
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+textarea:-webkit-autofill:active {
+    -webkit-text-fill-color: var(--text-primary) !important;
+    box-shadow: 0 0 0 1000px var(--bg-primary) inset !important;
+    -webkit-box-shadow: 0 0 0 1000px var(--bg-primary) inset !important;
+    transition: background-color 5000s ease-in-out 0s;
+}
+
 #root {
   position: relative;
   z-index: 0;
